<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Menu items -->
    <string name="menu_item_title_about">Info</string>
    <string name="menu_item_title_add_to_calendar">Add to calendar</string>
    <string name="menu_item_title_alarms">Alarms</string>
    <string name="menu_item_title_close_event_details">Close event details</string>
    <string name="menu_item_title_flag_as_favorite">Add to favorites</string>
    <string name="menu_item_title_unflag_as_favorite">Remove from favorites</string>
    <string name="menu_item_title_delete_favorite">Delete</string>
    <string name="menu_item_title_set_alarm">Set alarm</string>
    <string name="menu_item_title_delete_alarm">Clear alarm</string>
    <string name="menu_item_title_delete_all">Delete all</string>
    <string name="menu_item_title_favorites">Favorites</string>
    <string name="menu_item_title_feedback">Feedback</string>
    <string name="menu_item_title_navigate">Navigate</string>
    <string name="menu_item_title_refresh">Refresh</string>
    <string name="menu_item_title_schedule_changes">@string/schedule_changes</string>
    <string name="menu_item_title_settings">@string/settings</string>
    <string name="menu_item_title_share_event">Share event</string>
    <string name="menu_item_title_share_favorites">Share favorites</string>
    <string name="menu_item_title_search">Search</string>
    <string name="menu_item_title_search_hint">Search for something...</string>

    <!-- AlertDialogHelper -->
    <string name="OK">OK</string>

    <!-- CertificateDialog -->
    <string name="dlg_certificate_message_fmt">
        Failed to establish secure connection.\n
        (<xliff:g id="error" example="Unknown Error">%s</xliff:g>)
    </string>
    <string name="dlg_invalid_certificate_title">Trust unknown certificate?</string>
    <string name="dlg_invalid_certificate_could_not_apply">Certificate could not be added.</string>

    <!-- CustomHttpClient -->
    <string name="dlg_err_connection_failed">Connection failure</string>
    <string name="dlg_err_failed_unknown_host">Unknown address:\n%s</string>
    <string name="dlg_err_failed_wrong_http_credentials">Invalid HTTP Authentication</string>
    <string name="dlg_err_failed_timeout">Server doesn\'t respond (Timeout).</string>
    <string name="dlg_err_failed_connect_failure">Unknown connection failure</string>
    <string name="dlg_err_failed_not_found">Invalid schedule URL</string>
    <string name="dlg_err_failed_parse_failure">Couldn\'t parse response</string>
    <string name="dlg_err_failed_ssl_failure">SSL failure</string>
    <string name="uptodate">Schedule is up to date.</string>

    <!-- Schedule changes dialog -->
    <string name="schedule_changes_dialog_title">Schedule update</string>
    <string name="schedule_changes_dialog_updated_to_text">The schedule has been updated to\u0020</string>
    <string name="schedule_changes_dialog_changed_new_cancelled_text">. There are changes in <xliff:g id="num_changes" example="3 lectures">%1$s</xliff:g>, <xliff:g id="num_new" example="2 are">%2$s</xliff:g> new, <xliff:g id="num_canceled" example="1 is">%3$s</xliff:g> cancelled.</string>
    <string name="schedule_changes_dialog_affected_text">The changes affect <xliff:g id="num_marked" example="2">%1$d</xliff:g> of your favored lectures.</string>
    <plurals name="schedule_changes_dialog_number_of_lectures">
        <item quantity="one">%d lecture</item>
        <item quantity="other">%d lectures</item>
    </plurals>
    <plurals name="schedule_changes_dialog_being">
        <item quantity="one">%d is</item>
        <item quantity="other">%d are</item>
    </plurals>
    <string name="schedule_changes_dialog_browse">Browse</string>
    <string name="schedule_changes_dialog_later">Later</string>

    <string name="progress_loading_data">Get schedule &#8230;</string>
    <string name="progress_processing_data">Processing schedule &#8230;</string>
    <string name="load_data">Load</string>
    <string name="choose_day">Choose day</string>
    <string name="day">Day</string>
    <string name="fahrplan">Schedule</string>
    <string name="appVersion">App Version %s</string>
    <string name="schedule_updated_to">
        Updated to <xliff:g id="version" example="Mildenberg 2018-01-16 16:50">%s</xliff:g>
    </string>
    <string name="schedule_updated">
        The schedule has been updated.
    </string>
    <string name="settings">Settings</string>
    <string name="event_online">Event online</string>
    <string name="event_detail_section_title_links">Links</string>
    <string name="alarm_prompt">Alarm</string>
    <string name="choose_alarm_time">Choose alarm time</string>
    <string name="default_alarm_time_title">Choose a default alarm time</string>
    <string name="default_alarm_time_dialog_title">Default alarm time</string>
    <!-- Synchronize with @integers/default_alarm_time_index and string-array/alarm_time_values -->
    <string name="default_alarm_time_value" translatable="false">10</string>
    <string name="reminders">Alarms</string>
    <string name="reminder_ringtone">Alarm tone</string>
    <string name="insistent_alarm">Insistent alarm</string>
    <string name="usage">Note:\n\nLong-press on a lecture to set an alarm.</string>
	<string name="libraries">
		This application uses the following libraries:
		Kotlin, Google Support Library v4, Google AppCompat Library v7, Email Intent Builder,
		Espresso, OkHttp, SnackEngage, TraceDroid
	</string>
    <string name="about_data_privacy_statement">
        <![CDATA[<a href="https://github.com/EventFahrplan/EventFahrplan/blob/master/DATA-PRIVACY-DE.md">Data privacy statement (German)</a>]]>
    </string>
    <string name="copyright_notes" translatable="false">
        Copyright 2013-2018 johnjohndoe.
        \nCopyright 2011-2015 Daniel Dorau.
        \nContributions from Andy Scherzinger, Andreas Schildbach, bashtian, bjoernb, cketti, codingcatgirl, entropynil, koelnkalkverbot, ligi, MichaelRocks, Poschi, Stefan Medack, SubOptimal, Torsten Grote.
        \nPortions Copyright 2008-2011 The K-9 Dog Walkers and 2006-2013 the Android Open Source Project.
    </string>
	<string name="issues">
		<![CDATA[<a href="https://github.com/EventFahrplan/EventFahrplan/issues">Issues or feature requests</a>]]>
	</string>
    <string name="today">today</string>
    <string name="pref_auto_download">Automatic updates</string>
    <string name="parsing_error_generic">Unknown error while parsing schedule</string>
    <string name="parsing_error_with_version">Parsing error for schedule version %s</string>
	<string name="alarms_empty">
		There are no alarms to display. Please note that you
		can set up individual alarms for each item in the schedule.
		Just press the alarm icon in the action bar.
	</string>
    <string name="add_to_calendar_failed">Adding event to calendar failed.</string>
    <string name="no_changes">No schedule changes</string>
    <string name="no_favorites">No favorite lectures</string>
    <string name="schedule_changes">Schedule changes</string>

    <string name="dash" translatable="false"><xliff:g id="dash">—</xliff:g></string>
    <string name="general_settings">General</string>
    <string name="starred_lectures">Favorites</string>
    <string name="schedule_url">Alternative schedule URL</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="choose_to_delete">Select lectures</string>
    <string name="day_separator">Day <xliff:g id="day_of_congress" example="2">%1$d</xliff:g> - <xliff:g id="date_of_congress_day" example="29.12.2014">%2$s</xliff:g></string>
    <string name="event_duration"><xliff:g id="duration" example="45">%1$d</xliff:g> min.</string>
    <string name="alternative_highlight">Alternative highlighting</string>
    <string name="dlg_delete_all_favorites">Delete all favorites?</string>
    <string name="dlg_delete_all_favorites_delete_all">Delete all</string>

    <string name="share_error_activity_not_found">No fitting app installed.</string>

    <!-- Build information -->
    <string name="build_info_time">
        Build time: <xliff:g id="build_time" example="2015-12-27T13:42Z">%s</xliff:g>
    </string>
    <string name="build_info_version_code">
        Version code: <xliff:g id="version_code" example="42">%s</xliff:g>
    </string>
    <string name="build_info_hash">
        Version hash: <xliff:g id="build_hash" example="e1f2g3h-dirty">%s</xliff:g>
    </string>

    <!-- App disclaimer -->
    <string name="app_disclaimer">
        This application is based on the source code of the &#8220;EventFahrplan&#8221; app.
        Visitors of the annual congress and camp hosted by the Chaos Computer Club
        use the app to keep track of the event program.
    </string>

    <!-- SnackEngage -->
    <string name="snack_engage_rate_title">Everything fine?</string>
    <string name="snack_engage_rate_action">Rate the app</string>
    <string name="snack_engage_google_play_beta_testing_title">Power user?</string>
    <string name="snack_engage_google_play_beta_testing_action">Become a beta tester</string>

    <string name="snack_engage_c3nav_url" translatable="false">
        https://play.google.com/store/apps/details?id=de.c3nav.droid
    </string>
    <string name="snack_engage_c3nav_unique_id" translatable="false">c3nav</string>
    <string name="snack_engage_c3nav_title">Indoor navigation at 35C3! With the c3nav app</string>
    <string name="snack_engage_c3nav_action">Get it now!</string>

    <!-- TraceDroid -->
    <string name="trace_droid_dialog_title">
        Send <xliff:g id="appName" example="33C3 Schedule">%s</xliff:g> crash report &#8230;
    </string>
    <string name="trace_droid_dialog_message">
        A problem with the <xliff:g id="appName" example="33C3 Schedule">%s</xliff:g> app has
        been detected. It would be helpful if you could submit a crash report
        so the source of the problem can be identified.
    </string>
    <string name="trace_droid_button_title_send">
        Open email
    </string>
    <string name="trace_droid_no_email_app">
        No compatible email app installed.
    </string>
    <string name="trace_droid_button_title_no">
        No
    </string>
    <string name="trace_droid_button_title_later">
        Maybe later
    </string>
    <string name="trace_droid_app_chooser_title">
        Open draft with &#8230;
    </string>

    <!-- Notifications -->
    <string name="notifications_event_alarm_channel_description">
        Alarms created by the user for various events.
    </string>
    <string name="notifications_event_alarm_channel_name">Alarms for events</string>
    <string name="notifications_event_alarm_content_text">Alarm for event</string>
    <string name="notifications_event_alarm_content_title">@string/app_name</string>
    <string name="notifications_schedule_update_channel_description">
        Automatic updates of the schedule which can be configured in the app settings.
    </string>
    <string name="notifications_schedule_update_channel_name">Schedule updates</string>
    <plurals name="notifications_schedule_changes">
        <item quantity="one"><xliff:g id="count" example="1">%d</xliff:g> lecture has changed.</item>
        <item quantity="other"><xliff:g id="count" example="3">%d</xliff:g> lectures have been changed.</item>
    </plurals>

    <!-- Preferences -->
    <string name="preferences_reminder_tone_default_value" translatable="false"/>
    <string name="preferences_schedule_url_default_value" translatable="false"/>

</resources>
