<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="70"
        android:title="@string/menu_item_title_refresh"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_magnify"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/menu_item_favorites"
        android:icon="@drawable/ic_action_star_list_white_24px"
        android:title="@string/menu_item_title_favorites"
        android:titleCondensed="@string/menu_item_title_favorites"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/menu_item_alarms"
        android:icon="@drawable/ic_action_bell_list_white_24px"
        android:title="@string/menu_item_title_alarms"
        android:titleCondensed="@string/menu_item_title_alarms"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/menu_item_schedule_changes"
        android:icon="@drawable/ic_action_healing_list_white_24px"
        android:title="@string/menu_item_title_schedule_changes"
        android:titleCondensed="@string/menu_item_title_schedule_changes"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/menu_item_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="80"
        android:title="@string/menu_item_title_settings"
        android:titleCondensed="@string/menu_item_title_settings"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/menu_item_about"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:orderInCategory="90"
        android:title="@string/menu_item_title_about"
        android:titleCondensed="@string/menu_item_title_about"></item>

</menu>